# event-aruco

./: CMakeLists.txt  LICENSE.md  README.md  dataset_player.cpp  eventcam.cpp  eventcam.h  eventpacketprocessor.cpp  eventpacketprocessor.h  filesystem.cpp  filesystem.h  idscam.cpp  idscam.h  imageeventsynchronizer.cpp  imageeventsynchronizer.h  liveview.cpp  liveview.h  markercandidate.cpp  markercandidate.h  process_events.cpp  rgbe_recorder.cpp
